gap fixed in form page

--- a/css/form.css
+++ b/css/form.css
@@ -169,6 +169,12 @@ a {
   /* align-items: center; */
   /* gap: 20px; */
 }
+#buynow-form .wrapper .form-container .payment-info .payment-section .form-row .forgap{
+
+  display: flex;
+  gap: 10px;
+
+}
 
 #buynow-form .wrapper .form-container .payment-info .payment-section #code {
   background-color: transparent;
